--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <header>
     <img src="Logo.jpg" alt="Logo da Loja">
   </header>
-       <div class="produto">
+  <div class="produtos"></div>
+    <div class="produto">
       <img src="Produto 1.jpeg" alt="Produto 1">
       <div class="preco">R$ 39,00</div>
     </div>
@@ -317,5 +318,6 @@
       <img src="Produto 77.jpeg" alt="Produto 77">
       <div class="preco">R$ 101,00</div>
     </div>
-    </body>
+  </div>
+  </body>
 </html>
