--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <img src="Logo.jpg" alt="Logo da Loja">
   </header>
-  <div class="produtos"></div>
+  <div class="produtos-container"></div>
     <div class="produto">
       <img src="Produto 1.jpeg" alt="Produto 1">
       <div class="preco">R$ 39,00</div>
