--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <header>
     <img src="Logo.jpg" alt="Logo da Loja">
   </header>
-  <div class="produtos-container"></div>
-    <div class="produto">
+  <div class="produtos"> <div class="produto">
       <img src="Produto 1.jpeg" alt="Produto 1">
       <div class="preco">R$ 39,00</div>
     </div>
@@ -314,10 +313,10 @@
       <img src="Produto 76.jpeg" alt="Produto 76">
       <div class="preco">R$ 100,00</div>
     </div>
-     <div class="produto">
+    <div class="produto">
       <img src="Produto 77.jpeg" alt="Produto 77">
       <div class="preco">R$ 101,00</div>
     </div>
   </div>
-  </body>
+</body>
 </html>
